--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "vue": "^3.0.0-rc.1"
   },
   "devDependencies": {
+    "@vue/compiler-dom": "^3.0.0-rc.12",
+    "@vue/compiler-sfc": "^3.0.0-rc.12",
     "nodemon": "^1.19.1"
   }
 }
